feat: add headline to head

--- a/sample/index.html
+++ b/sample/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>cssed</title>
+    <title>cssed - the complete css framework</title>
 </head>
 <body>
 <div id="app"></div>
