--- a/samples/runtime/index.html
+++ b/samples/runtime/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang='en'>
-<head>
-  <title>curssed - the complete css framework</title>
-</head>
-<body>
-<script type='module' src='main.js'></script>
-</body>
+<html lang="en">
+  <head>
+    <title>curssed - the complete css framework</title>
+  </head>
+  <body>
+    <script type="module" src="main.js"></script>
+  </body>
 </html>
